<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/editorCancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerConstraint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/editorHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginLeft="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:layout_marginRight="@dimen/margin_small"
                    android:fontFamily="sans-serif"
                    android:text="@string/marker_editor"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/info_window_city_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/editorWeatherIcon"
                    android:layout_width="@dimen/editor_icon_size"
                    android:layout_height="@dimen/editor_icon_size"
                    android:layout_marginTop="@dimen/editor_icon_margin"
                    android:layout_marginBottom="@dimen/editor_icon_margin"
                    android:background="@drawable/background_info_window"
                    android:contentDescription="@string/current_weather"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:srcCompat="@drawable/weather_icon_01" />

                <ImageView
                    android:id="@+id/editorChangeIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/editor_pen_icon_margin_left"
                    android:layout_marginLeft="@dimen/editor_pen_icon_margin_left"
                    android:layout_marginBottom="@dimen/editor_pen_icon_margin_bottom"
                    android:contentDescription="@string/edit_current_weather"
                    app:layout_constraintBottom_toBottomOf="@+id/editorWeatherIcon"
                    app:layout_constraintStart_toStartOf="@+id/editorWeatherIcon"
                    app:srcCompat="@drawable/ic_edit_pen_button"></ImageView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/editorNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:fontFamily="sans-serif"
                android:text="@string/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerConstraint" />

            <EditText
                android:id="@+id/editorNameEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:background="@drawable/background_edit_text"
                android:hint="@string/enter_the_city_name"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:nextFocusLeft="@id/editorNameEdit"
                android:nextFocusUp="@id/editorNameEdit"
                android:padding="@dimen/edit_text_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorNameText" />

            <TextView
                android:id="@+id/editorNameError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/error_valid_name_spec_chars"
                android:textColor="@color/colorCancelButton"
                android:textSize="@dimen/error_text_size"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/editorNameEdit"
                app:layout_constraintTop_toBottomOf="@+id/editorNameEdit" />

            <TextView
                android:id="@+id/editorTemperatureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/temperature_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorNameError" />

            <TextView
                android:id="@+id/editorTemperatureMinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/temperature_min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorTemperatureText" />

            <SeekBar
                android:id="@+id/temperatureSeekBar"
                style="@style/SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorTemperatureMinText"
                tools:progress="50" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:text="@string/temperature_max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorTemperatureText" />

            <TextView
                android:id="@+id/editorWindText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/wind_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pressureSeekBar" />

            <TextView
                android:id="@+id/editorWindMinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/zero"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorWindText" />

            <SeekBar
                android:id="@+id/windSeekBar"
                style="@style/SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorWindMinText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:text="@string/wind_max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorWindText" />

            <TextView
                android:id="@+id/editorCloudyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/cloudy_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/windSeekBar" />

            <TextView
                android:id="@+id/editorCloudyMinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/zero"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorCloudyText" />

            <SeekBar
                android:id="@+id/cloudySeekBar"
                style="@style/SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorCloudyMinText" />

            <TextView
                android:id="@+id/editorCloudyError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/error_valid_cloudy"
                android:textColor="@color/colorCancelButton"
                android:textSize="@dimen/error_text_size"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/cloudySeekBar"
                app:layout_constraintTop_toBottomOf="@+id/cloudySeekBar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:text="@string/one_hundred"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorCloudyText" />

            <TextView
                android:id="@+id/editorHumidityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/humidity_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorCloudyError" />

            <TextView
                android:id="@+id/editorHumidityMinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/zero"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorHumidityText" />

            <SeekBar
                android:id="@+id/humiditySeekBar"
                style="@style/SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorHumidityMinText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:text="@string/one_hundred"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorHumidityText" />

            <TextView
                android:id="@+id/editorHumidityError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/error_valid_humidity"
                android:textColor="@color/colorCancelButton"
                android:textSize="@dimen/error_text_size"
                app:layout_constraintStart_toStartOf="@+id/humiditySeekBar"
                app:layout_constraintTop_toBottomOf="@+id/humiditySeekBar"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/editorPressureText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/pressure_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/temperatureSeekBar" />

            <TextView
                android:id="@+id/editorPressureMinText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:text="@string/pressure_min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorPressureText" />

            <SeekBar
                android:id="@+id/pressureSeekBar"
                style="@style/SeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorPressureMinText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:text="@string/pressure_max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editorPressureText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/editorCancelButton"
        style="@style/ButtonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editorSaveButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editorSaveButton"
        style="@style/ButtonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editorCancelButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
